@@ -68,7 +68,8 @@
         <field key="renderer" dbtype="varchar" precision="255" phptype="string" null="false" default="" />
         <field key="php_renderer" dbtype="varchar" precision="255" phptype="string" null="false" default="" />
         <field key="position" dbtype="int" attributes="unsigned" precision="10" phptype="integer" null="false" default="0" />
-
+        <field key="sort_type" dbtype="varchar" precision="64" phptype="string" null="true" />
+        
         <aggregate alias="Template" class="CollectionTemplate" local="template" foreign="id" cardinality="one" owner="foreign" />
     </object>
 
