@@ -1,5 +1,6 @@
 Changelog for Collections.
 
+- Add sort type as a new Collection's template column setting
 - Add permanent sort
 - Auto set column label from TV caption or Tagger group name
 - Pass columns value as input to snippet renderer
